[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/BlockTexture.png" type="Texture" id=1]
[ext_resource path="res://Scripts/CodeNode.gd" type="Script" id=2]
[ext_resource path="res://Assets/Arrow.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Arrow.gd" type="Script" id=4]
[ext_resource path="res://Assets/Lock.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/Neon Zone/Neon Zone Italic.otf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[node name="CodeNode" type="Control" groups=["CodeNode"]]
margin_left = 1.0
margin_top = -1.0
margin_right = 1.0
margin_bottom = -1.0
mouse_filter = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="NinePatchRect" parent="."]
modulate = Color( 0.329412, 0.117647, 0.117647, 1 )
light_mask = 0
margin_right = 160.0
margin_bottom = 240.0
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 84, 84 )
patch_margin_left = 15
patch_margin_top = 14
patch_margin_right = 13
patch_margin_bottom = 13

[node name="OutArrow1" type="TextureRect" parent="."]
margin_left = 142.0
margin_top = 72.0
margin_right = 164.0
margin_bottom = 100.0
texture = ExtResource( 3 )
stretch_mode = 4
script = ExtResource( 4 )

[node name="InArrow1" type="TextureRect" parent="."]
margin_left = -4.0
margin_top = 72.0
margin_right = 18.0
margin_bottom = 100.0
texture = ExtResource( 3 )
stretch_mode = 4
script = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 28.0
margin_top = 16.0
margin_right = 136.0
margin_bottom = 43.0
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Position"

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
margin_left = 30.0
margin_top = 59.0
margin_right = 130.0
margin_bottom = 115.0
mouse_filter = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Lock" type="TextureRect" parent="."]
visible = false
margin_left = 117.0
margin_top = 11.0
margin_right = 157.0
margin_bottom = 51.0
texture = ExtResource( 5 )

[connection signal="focus_entered" from="TextEdit" to="." method="_on_TextEdit_focus_entered"]
